# autofinance

./: .gitignore  README.md  cli.spec  pyproject.toml  read_code.sh
auto_finance/: cli.py
auto_finance/actions/: _analyze_stock.py  analyze_stock.py
auto_finance/agents/: analysis_agent.py  base.py  portfolio_agent.py  types.py
auto_finance/base/: handler.py
auto_finance/config/: di.py  settings.py
auto_finance/llm/: anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py
auto_finance/prompts/: stock_analysis_prompt.py
auto_finance/schemas/: analysis_schema.py
auto_finance/tools/: _news_data.py  market_data.py  news_data.py  technical_indicators.py
